--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "gsap": "^3.12.5",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
