--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "axios": "^1.6.8",
     "gsap": "^3.12.5",
+    "leaflet": "^1.9.4",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
